WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44111
feTurbulence filter doesn't display properly
https://bugs.webkit.org/show_bug.cgi?id=44111
Summary
feTurbulence filter doesn't display properly
Renata Hodovan
Reported
2010-08-17 08:39:29 PDT
feTurbulence filter doesn't display properly
Attachments
Fix displaying problems of feTurbulence and add a new test.
(233.86 KB, patch)
2010-08-17 09:06 PDT
,
Renata Hodovan
krit
: review-
Details
Formatted Diff
Diff
Fix displaying problems of feTurbulence and add a new test.
(234.04 KB, patch)
2010-08-17 12:22 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2010-08-17 08:52:20 PDT
hm? :-P Can you provide some more details? :-)
Renata Hodovan
Comment 2
2010-08-17 09:06:30 PDT
Created
attachment 64598
[details]
Fix displaying problems of feTurbulence and add a new test.
Renata Hodovan
Comment 3
2010-08-17 09:12:24 PDT
(In reply to
comment #1
)
> hm? :-P Can you provide some more details? :-)
We already talked about that by
http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObject/filters-turb-02-f.html
the two pics are not equivalent in WebKit. I've found the reason of this. It's fixed now and this test is added to WebKit as well.
Dirk Schulze
Comment 4
2010-08-17 09:29:07 PDT
Comment on
attachment 64598
[details]
Fix displaying problems of feTurbulence and add a new test. Patch looks good. But discribe the bug and how you fixed it in the ChangeLog, please. I'll give r+ on a better ChangeLog.
Dirk Schulze
Comment 5
2010-08-17 10:41:09 PDT
(In reply to
comment #3
)
> (In reply to
comment #1
) > > hm? :-P Can you provide some more details? :-) > > We already talked about that by
http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObject/filters-turb-02-f.html
the two pics are not equivalent in WebKit. I've found the reason of this. It's fixed now and this test is added to WebKit as well.
Yes I know, but you should explain it in bug reports as well.
Renata Hodovan
Comment 6
2010-08-17 12:22:15 PDT
Created
attachment 64616
[details]
Fix displaying problems of feTurbulence and add a new test.
Dirk Schulze
Comment 7
2010-08-17 22:25:18 PDT
Comment on
attachment 64616
[details]
Fix displaying problems of feTurbulence and add a new test. Great Patch! r=me
Dirk Schulze
Comment 8
2010-08-18 06:08:11 PDT
Comment on
attachment 64616
[details]
Fix displaying problems of feTurbulence and add a new test. Sorry, forgot to set cq+.
Zoltan Herczeg
Comment 9
2010-08-18 06:11:36 PDT
Landed in
http://trac.webkit.org/changeset/65590
Forgot to close the bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug