WebCore: Fix displaying problem of feTurbulence. https://bugs.webkit.org/show_bug.cgi?id=44111

Patch by Renata Hodovan <reni@inf.u-szeged.hu> on 2010-08-18
Reviewed by Dirk Schulze.

Change the order of calculating turbulenceFunctionResult
and clamping it. Furthermore remove the unnecessary rounding of m_seed.
Add a new test for checking the change of seed's value.

Test: svg/W3C-SVG-1.1/filters-turb-02-f.svg

* svg/graphics/filters/SVGFETurbulence.cpp:
(WebCore::FETurbulence::initPaint):
(WebCore::FETurbulence::calculateTurbulenceValueForPoint):
(WebCore::FETurbulence::apply):

LayoutTests: https://bugs.webkit.org/show_bug.cgi?id=44111

Patch by Renata Hodovan <reni@inf.u-szeged.hu> on 2010-08-18
Reviewed by Dirk Schulze.

Update expected result of test svg/W3C-SVG-1.1/filters-turb-01-f.svg and
add a new test for checking the change of the seed value.

* platform/mac/svg/W3C-SVG-1.1/filters-turb-01-f-expected.checksum:
* platform/mac/svg/W3C-SVG-1.1/filters-turb-01-f-expected.png:
* platform/mac/svg/W3C-SVG-1.1/filters-turb-02-f-expected.checksum: Added.
* platform/mac/svg/W3C-SVG-1.1/filters-turb-02-f-expected.png: Added.
* platform/mac/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt: Added.
* svg/W3C-SVG-1.1/filters-turb-02-f.svg: Added.



Canonical link: https://commits.webkit.org/56373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65590 268f45cc-cd09-0410-ab3c-d52691b4dbfc